<resources>
    <string name="app_name">Walletallin</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_up">Sign up now!</string>
    <string name="update">Update</string>
    <string name="sign_up_with_upper">Sign Up</string>
    <string name="sing_up">Sign Up</string>
    <string name="private_account">Private account</string>
    <string name="business_account">Business account</string>
    <string name="login">Login</string>
    <string name="log_in">Log in</string>
    <string name="browse">Browse</string>
    <string name="choose_file">Choose file</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="company_name">Company name</string>
    <string name="company_number">Company number</string>
    <string name="company_phone_number">Company Phone number</string>
    <string name="company_email">Company Email</string>
    <string name="company_website">Company website</string>
    <string name="company_director_first_name">First name of director</string>
    <string name="company_director_last_name">Last name of director</string>
    <string name="company_city">Company city</string>
    <string name="company_street">Company Street</string>
    <string name="company_post_code">Company postal code</string>
    <string name="company_country">Company country</string>
    <string name="company_description">Company Description</string>
    <string name="address_info">Address Info</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="password_confirm">Repeat Password</string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>
    <string name="phone">Phone</string>
    <string name="save">Save</string>
    <string name="wrong_pass">Passwords do not match</string>
    <string name="error">ERROR</string>
    <string name="will_be_set_to">Will be sent to:</string>
    <string name="verify_address">Please Verify the Address properly.</string>
    <string name="sent_btc">Sent BTC can not be reversed in any case.</string>
    <string name="kyc_btn_continue">Continue</string>
    <string name="kyc_btn_later">Later</string>
    <string name="kyc_title">Complete Your KYC</string>
    <string name="kyc_text">In order to buy / sell crypto
                            you must complete KYC process
                            Would you like to do it now?</string>
    <string name="kyc_continue">Continue</string>
    <string name="kyc_later">Later</string>
    <string name="take_photo">Take image</string>
    <string name="open_library">open library</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="bitcoin_wallet">Bitcoin Wallet</string>
    <string name="ethereum_wallet">Ethereum Wallet</string>
    <string name="litecoin_wallet">Litecoin Wallet</string>
    <string name="ripple_wallet">Ripple Wallet</string>
    <string name="bitcoin_cash_wallet">Bitcoin Cash Wallet</string>
    <string name="dashcoin_wallet">Dashcoin Wallet</string>
    <string name="bitcoin_abreviatoure">BTC</string>
    <string name="ethereum_abreviatoure">ETH</string>
    <string name="litecoin_abreviatoure">LTC</string>
    <string name="ripple_abreviatoure">XRP</string>
    <string name="bitcoin_cash_abreviatoure">BCH</string>
    <string name="dashcoin_abreviatoure">DCS</string>
    <string name="bitcoin_price">0.15384</string>
    <string name="bitcoin_cash_price">0.15384</string>
    <string name="dashcoin_price">0.15384</string>
    <string name="dashcoin_result">23,12$</string>
    <string name="bitcoin_cash_result">23,12$</string>
    <string name="bitcoin_result">23,12$</string>
    <string name="settings">Settings</string>
    <string name="edit_profile">Edit profile</string>
    <string name="KYC">KYC</string>
    <string name="reset_password">Security</string>
    <string name="other_settings">Other Settings</string>
    <string name="log_out">Log Out</string>
    <string name="not_start_verify">Not start verify</string>
    <string name="approved">Approved</string>
    <string name="start_verify">Start verify</string>
    <string name="error_verify">Error verify</string>
    <string name="needs_review">Needs review</string>
    <string name="declined">Declined</string>
    <string name="unknown">Unknown</string>
    <string name="program_not_start_verify">Not start verify</string>
    <string name="program_approved">Approved</string>
    <string name="program_needs_review">Needs review</string>
    <string name="program_declined">Declined</string>
    <string name="program_processing">Processing</string>
    <string name="to_address">To Address</string>
    <string name="amount_to_send">Amount</string>
    <string name="send_coin">Send Coin</string>
    <string name="forgot_password_two">Forgot Password</string>
    <string name="send_to_mail">Reset</string>
    <string name="a_link_to_reset">A link to reset your password will be sent to your email</string>
    <string name="title">title</string>
    <string name="type">type</string>
    <string name="price">price</string>
    <string name="result">result</string>
    <string name="wallet_toolbar_title">1465,20 USD</string>
    <string name="wallet_toolbar_total">Total balance</string>
    <string name="send">Send</string>
    <string name="receive">Receive</string>
    <string name="buy_sell">Buy&amp;Sell</string>
    <string name="buy">Buy</string>
    <string name="sell">Sell</string>
    <string name="swap">Swap</string>
    <string name="with">With</string>
    <string name="transaction_title">167465,20 ETH</string>
    <string name="transaction_total">= 59,23 $</string>
    <string name="transaction_send">Send</string>
    <string name="transaction_receive">Receive</string>
    <string name="no_transaction">"You don't have\nTransaction yet"</string>
    <string name="english">English</string>
    <string name="russian">Russian</string>
    <string name="arabic">Arabic</string>
    <string name="deutch">Deutch</string>
    <string name="italiano">Italiano</string>
    <string name="portuguese">Portuguese</string>
    <string name="espanol">Espanol</string>
    <string name="change_language">Change Language</string>
    <string-array name="item_exchange">
        <item>BTC</item>
        <item>USD</item>
    </string-array>
    <string name="network_fees">Network fees\u0020:\u0020</string>
    <string name="send_max">Max</string>
    <string name="max_amount">Maximum amount is</string>
    <string name="btc_max_amount">~BTC 0.04324352</string>
    <string name="fees">Fees\u0020:\u0020</string>
    <string name="sat_number">0</string>
    <string name="sat_per_byte">USD</string>
    <string name="allow_uncinfirmed">Allow unconfirmed replaceable transactions</string>
    <string name="fa_code">2FA Code</string>
    <string name="btc_down_result">BTC 0.75894509</string>
    <string name="close">Close</string>
    <string name="exchange_soon">Exchange Coming Soon</string>
    <string name="exchange_soon_description">Stay tuned! We’ll let you know once exchange will released in our app.</string>
    <string name="back_to_wallet">Back to Wallet</string>
    <string name="use_your_fingerprint_to_enter">Use your fingerprint to enter</string>
    <string name="use_your_face_ID_to_enter">Use your face ID to enter</string>
    <string name="scan_your_face">scan your face</string>
    <string name="scan_your_fingerprint">scan your fingerprint</string>
    <string name="or_use_MPin">or use MPin</string>
    <string name="enter_your_4_digit_PIN_code">Enter your 4 digit PIN code.</string>
    <string name="Dont_have_an_account">Don’t have an account yet?</string>
    <string name="available_balance">Available BALANCE</string>
    <string name="i_have">I have</string>
    <string name="i_want">I want</string>
    <string name="min">Min</string>
    <string name="half">Half</string>
    <string name="All">All</string>
    <string name="exchanging">Exchanging</string>
    <string name="receiving">Receiving</string>
    <string name="exchange">Exchange</string>
    <string name="total_balance">Total balance</string>
    <string name="exchange_confirmation_title">Exchange Confirmation</string>
    <string name="exchange_confirmation_descr">Are you confirm exchange</string>
    <string name="exchange_confirmation_to">to</string>
    <string name="confirm">Confirm</string>
    <string name="convert_from">Convert from</string>
    <string name="convert_to">Convert to</string>
    <string name="login_from_sing_up_0">Enter your Email and new Password\nfor sign up, or</string>
    <string name="login_from_sing_up_1">Already have account?</string>
    <string name="login_from_sing_up_business_0">Enter all field\nfor sign up to Business account, or</string>
    <string name="login_from_sing_up_business_1">Already have account?</string>
    <string name="total_btc">Total BTC:</string>
    <string name="total_fiat">Total</string>
    <string name="menu_wallet">WALLET</string>
    <string name="menu_exchange">EXCHANGE</string>
    <string name="menu_profile">PROFILE</string>
    <string name="menu_actions">ACTIONS</string>
    <string name="menu_actions_lover_case">Actions</string>
    <string name="use_link_below">Use the address below to receive funds.</string>
    <string name="copied">Copied</string>
    <string name="slow">Slow</string>
    <string name="normal">Normal</string>
    <string name="fast">Fast</string>
    <string name="custom">Custom</string>
    <string name="personal_info">Personal Info</string>
    <string name="currency">Currency</string>
    <string name="upload_doc">Upload document</string>
    <string name="passport">Passport</string>
    <string name="description_passport">Prepare local passport or id card</string>
    <string name="wallet_switch_crypto_account">Crypto Account</string>
    <string name="wallet_switch_fiat">Fiat</string>
    <string name="crypto_account">Crypto Account</string>
    <string name="fiat">Fiat</string>
    <string name="rate_changed_update_request">Rate changed, update request</string>
    <string name="rate_available_for_sec">Rate available for %d sec</string>
    <string name="rate">Rate</string>
    <string name="buy_now">Buy Now</string>
    <string name="your_mobile">Your mobile %s</string>
    <string name="verify_purchase">Verify Purchase</string>
    <string name="verify">Verify</string>
    <string name="commission">Commission</string>
    <string name="total_price">Total Price</string>
    <string name="rate_changed">Rate changed</string>
    <string name="waiting_for_your_coins">Waiting for your coins....</string>
    <string name="your_transaction_is_in_progress">Your transaction is in progress</string>
    <string name="transaction_failed">Transaction Failed</string>
    <string name="please_go_back_for_another_try">Please go back for another try</string>
    <string name="transaction_documents">Transaction Documents</string>
    <string name="scan_your_document">Scan your Document</string>
    <string name="or_choose_document_manually">or choose Document manually</string>
    <string name="choose">Choose</string>
    <string name="look_good">Look good?</string>
    <string name="make_sure_the_picture_is_clear">Make sure the picture is clear</string>
    <string name="documents_required">Documents Required</string>
    <string name="we_couldn_t_capture_try_again">We couldn’t capture, try again</string>
    <string name="try_shooting_in_a_better_lighting">Try shooting in a better lighting</string>
    <string name="try_again">Try again</string>
    <string name="welcome_back">Welcome back</string>
    <string name="hello_s">Hello %s</string>
</resources>