<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/darkGrey">

    <TextView
        android:id="@+id/tvTitle"
        style="@style/H4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="8dp"
        android:text="@string/menu_actions_lover_case"
        android:textColor="@color/white"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tvHello"
        style="@style/H3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="8dp"
        android:text="@string/hello_s"
        android:textColor="@color/white"
        android:layout_marginTop="40dp"
        android:layout_marginStart="40dp"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tvWelcomeBack"
        style="@style/H4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="8dp"
        android:text="@string/welcome_back"
        android:textColor="@color/white"
        android:layout_marginStart="40dp"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/tvHello"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvWelcomeBack"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="50dp">

        <Button
            android:id="@+id/btn2"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:background="@drawable/bg_item_wallet_border_acute_left_bottom"
            android:gravity="center"
            android:text="@string/send"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:layout_marginHorizontal="3dp"
            app:layout_constraintStart_toEndOf="@+id/btn1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn4"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:background="@drawable/bg_item_wallet_border_acute_left_top"
            android:gravity="center"
            android:text="@string/swap"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:layout_marginHorizontal="3dp"
            android:layout_marginTop="6dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn3"
            app:layout_constraintTop_toBottomOf="@+id/btn2" />

        <Button
            android:id="@+id/btn3"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginTop="6dp"
            android:layout_marginHorizontal="3dp"
            android:background="@drawable/bg_item_wallet_border_acute_right_top"
            android:gravity="center"
            android:text="@string/receive"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:visibility="gone"
            tools:visibility="visible"
            app:layout_constraintEnd_toStartOf="@+id/btn4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn2"/>

        <Button
            android:id="@+id/btn1"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:background="@drawable/bg_item_wallet_border_acute_right_bottom"
            android:gravity="center"
            android:text="@string/buy_sell"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:layout_marginHorizontal="3dp"
            app:layout_constraintEnd_toStartOf="@+id/btn2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>