<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/profileToolbar"
        layout="@layout/toolbar" />

    <com.example.moneybee.ui.widgets.inputField.InputFieldComponent
        android:id="@+id/ifcProfileFirstName"
        android:layout_width="136dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/profileToolbar"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="74dp"
        android:layout_marginStart="40dp"
        app:ifc_header="@string/first_name"
        />

    <com.example.moneybee.ui.widgets.inputField.InputFieldComponent
        android:id="@+id/ifcProfileLastName"
        android:layout_width="136dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profileToolbar"
        android:layout_marginTop="74dp"
        android:layout_marginEnd="40dp"
        app:ifc_header="@string/last_name"
        />

    <com.example.moneybee.ui.widgets.inputField.InputFieldComponent
        android:id="@+id/ifcProfileEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:ifc_header="@string/email"
        app:ifc_type="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@id/ifcProfileFirstName"
        android:layout_marginTop="10dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        />

    <com.example.moneybee.ui.widgets.inputField.InputFieldComponent
        android:id="@+id/ifcProfilePhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:ifc_header="@string/phone"
        app:layout_constraintTop_toBottomOf="@id/ifcProfileEmail"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:id="@+id/tvCurrency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Currency"
        app:layout_constraintTop_toBottomOf="@id/ifcProfilePhone"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="40dp"
        android:layout_marginTop="12dp"
        style="@style/H8"
        android:textColor="@color/grey"
        />
    
    <TextView
        android:id="@+id/tvCurrencyField"
        android:layout_width="112dp"
        android:layout_height="32dp"
        app:layout_constraintTop_toBottomOf="@id/tvCurrency"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="40dp"
        android:background="@drawable/bg_input_field"
        style="@style/H8"
        android:textColor="@color/darkGrey"
        android:text="USD"
        android:gravity="center_vertical"
        android:paddingStart="16dp"
        android:layout_marginTop="3dp"
        />

    <TextView
        android:id="@+id/tvSwitchTitle"
        style="@style/H8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ifcProfilePhone"
        android:text="2FA"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="178dp"
        />

    <com.example.coinsliberty.ui.widgets.inputField.switch.SwitchComponent
        android:id="@+id/profileSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvSwitchTitle"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="3dp"
        app:sc_left_btn_text="@string/enabled"
        app:sc_right_btn_text="@string/disabled"
        />

    <TextView
        android:id="@+id/tvChooseFileTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvCurrencyField"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="40dp"
        android:text="Upload document"
        style="@style/H8"
        android:textColor="@color/grey"
        android:layout_marginTop="12dp"
        />

    <com.example.coinsliberty.ui.widgets.inputField.attach.AttachComponent
        android:id="@+id/profileAttachComponent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvChooseFileTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="3dp"
        app:ac_text_field_text="Choose"
        app:ac_button_text="Browse"
        />

    <Button
        android:id="@+id/btnLoginUpdate"
        style="@style/ButtonGreyBorder"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="@string/save"
        android:textColor="@color/lightBlue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileAttachComponent"
        android:layout_marginTop="40dp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>