<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/darkGrey">

    <TextView
        android:id="@+id/walletToolbar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/bg_toolbar"
        android:layout_marginBottom="27dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/vDelimiter"/>

    <TextView
        android:id="@+id/tvTitleGL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/look_good"
        android:textColor="@color/white"
        style="@style/H1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/walletToolbar"
        app:layout_constraintTop_toTopOf="@+id/tvTitle"/>

    <TextView
        android:id="@+id/tvTextGL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/make_sure_the_picture_is_clear"
        android:textColor="@color/white"
        style="@style/H4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/walletToolbar"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleGL"/>

    <TextView
        android:id="@+id/tvBack"
        style="@style/H4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:textColor="@color/white"
        android:layout_marginStart="@dimen/dialog_forgot_iv_lock_marginStart"
        android:layout_marginTop="44dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/selector_arrow_back"/>

    <TextView
        android:id="@+id/tvTitle"
        style="@style/H3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="name"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvBack"
        app:layout_constraintBottom_toBottomOf="@+id/tvBack"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/vDelimiter"
        app:layout_constraintVertical_bias="0.3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvTitle"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <LinearLayout
        android:id="@+id/llError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/vDelimiter2"
        app:layout_constraintTop_toTopOf="@+id/tvTitle"
        android:orientation="vertical"
        android:gravity="center"
        android:visibility="gone">
        <TextView
            android:id="@+id/tvTitleError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/we_couldn_t_capture_try_again"
            android:textColor="@color/white"
            style="@style/H1"/>
        <TextView
            android:id="@+id/tvTextError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/try_shooting_in_a_better_lighting"
            android:textColor="@color/txt_blue"
            style="@style/H4"
            android:layout_marginTop="20dp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/btnTryAgain"
        android:layout_width="match_parent"
        android:layout_height="@dimen/wallet_types_s_buttons_height"
        android:layout_marginStart="@dimen/wallet_types_s_btns_margin_start_end"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="@dimen/wallet_types_s_btns_margin_start_end"
        android:background="@drawable/btn_blue_login"
        android:gravity="center"
        android:text="@string/try_again"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/vDelimiter2"
        android:visibility="gone"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clCanvasImgUpload"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/bg_img_upload"
        android:layout_marginHorizontal="25dp"
        android:layout_marginVertical="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/vDelimiter"
        app:layout_constraintBottom_toTopOf="@+id/tvChooseDoc">

        <ImageView
            android:id="@+id/ivUpLoad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_settings_cloud"
            app:layout_constraintTop_toTopOf="@id/clCanvasImgUpload"
            app:layout_constraintBottom_toBottomOf="@+id/clCanvasImgUpload"
            app:layout_constraintStart_toStartOf="@id/clCanvasImgUpload"
            app:layout_constraintEnd_toEndOf="@id/clCanvasImgUpload" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scan_your_document"
            android:textColor="@color/txt_blue"
            android:layout_marginTop="7dp"
            app:layout_constraintTop_toBottomOf="@+id/ivUpLoad"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tvChooseDoc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or_choose_document_manually"
        android:textColor="@color/txt_blue"
        android:layout_marginTop="19dp"
        app:layout_constraintVertical_bias="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ImageView
        android:id="@+id/ivNewImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/vDelimiter"
        app:layout_constraintBottom_toBottomOf="@+id/vDelimiter2"
        app:srcCompat="@drawable/img_kyc_manually"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/vDelimiter2"
        app:layout_constraintVertical_bias="0.8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvTitle"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/tvChoose"
        style="@style/H3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose"
        android:textColor="@color/white"
        android:layout_marginStart="@dimen/dialog_forgot_iv_lock_marginStart"
        android:layout_marginBottom="14dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:srcCompat="@drawable/selector_arrow_back"/>

    <TextView
        android:id="@+id/tvNext"
        style="@style/H3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kyc_continue"
        android:textColor="@color/txt_blue"
        android:layout_marginEnd="@dimen/dialog_forgot_iv_lock_marginStart"
        android:layout_marginBottom="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:srcCompat="@drawable/selector_arrow_back"/>

</androidx.constraintlayout.widget.ConstraintLayout>