<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="@dimen/wallet_item_margin_bottom">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/itemWalletLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/bg_wallet_item_light_orange"
        >
        <ImageView
            android:id="@+id/ivItemWalletIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_bitcoin"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_margin="@dimen/wallet_item_image_margin"
            />
        <TextView
            android:id="@+id/tvItemWalletTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:hint="@string/title"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/ivItemWalletIcon"
            android:layout_marginTop="@dimen/wallet_item_title_margin_top"
            android:layout_marginStart="@dimen/wallet_item_title_margin_start"
            style="@style/H5"
            android:textColor="@color/darkBlue"
            />
        <TextView
            android:id="@+id/tvItemWalletType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/ivItemWalletIcon"
            tools:hint="@string/type"
            android:textColor="@color/grey"
            style="@style/H4"
            android:layout_marginBottom="@dimen/wallet_item_type_margin_bottom"
            android:layout_marginStart="@dimen/wallet_item_type_margin_start"
            />

        <TextView
            android:id="@+id/tvItemWalletPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="@dimen/wallet_item_price_margin_top"
            android:layout_marginEnd="@dimen/wallet_item_price_margin_end"
            tools:hint="@string/price"
            style="@style/H5"
            android:textColor="@color/darkBlue"
            />

        <TextView
            android:id="@+id/tvItemWalletResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="@dimen/wallet_item_result_margin_end"
            android:layout_marginBottom="@dimen/wallet_item_result_margin_bottom"
            tools:hint="@string/result"
            android:textColor="@color/grey"
            style="@style/H4"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>